# mcp_client_server

langgraph_mcp/: .gitignore  graph.py  graph_2.py  langgraph_mcp.py  mcp_server_local.py  multiple_Server.py  pyproject.toml  requiremnet.txt  streamlit_mcp_laggraph.py
mcp_projects/mcp-client/: client.py  pyproject.toml
mcp_projects/mcp-server/: pyproject.toml  weather.py
